name:                wai-servlet-handler-jetty
version:             0.1.0.0
-- synopsis:            
description:         Wai handler to run wai applications in a embedded jetty server
-- license:             
license-file:        LICENSE
author:              jneira
maintainer:          atreyu.bbb@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , wai
  hs-source-dirs:      src
  default-language:    Haskell2010
